# cluttered-pushing

./: .gitignore  README.md  environment.yml  pushing_env.txt
Networks/RL/: .gitignore  README.md
Networks/RL/scripts/: custom_callbacks.py  parameters.yaml  policy_network.py  run_agent.py  test_agent_script.py  train_agent_script.py
Networks/VAE/: .gitignore  README.md
Networks/VAE/models/: tf_model.py
Networks/VAE/scripts/: custom_callback.py  parameters.yaml  run_vae.py  train_vae.py
Networks/VAE/utils/: combine_h5.py  convert_np_to_h5.py  h5_test.py
push_gym/: README.md  setup.py
push_gym/push_gym/: __init__.py
push_gym/push_gym.egg-info/: PKG-INFO  SOURCES.txt
push_gym/push_gym/baseline_approach/: corridors.py
push_gym/push_gym/environments/: base_environment.py  ur5_environment.py
push_gym/push_gym/evaluation/: .gitignore  evaluation.py  evaluation_function.py  test.py
push_gym/push_gym/tasks/: curriculum_tasks.py  pushing.py
push_gym/push_gym/utils/: .gitignore  custom_utils.py  debug_points.py  lazy_theta_star.py  pushing_utils.py  transforms.py  (+2 more)
push_gym/push_gym/utils/Lazy-Theta-with-optimization-any-angle-pathfinding/: CMakeLists.txt  README.md
push_gym/push_gym/utils/Lazy-Theta-with-optimization-any-angle-pathfinding/include/: get_combination.hpp
push_gym/push_gym/utils/Lazy-Theta-with-optimization-any-angle-pathfinding/src/: main_many_path.cpp  main_single_path.cpp
push_gym/push_gym/utils/Lazy-Theta-with-optimization-any-angle-pathfinding/test/: plot_many.py  test_LazyThetaStarPython.py  test_robot_arm.py  test_solver_and_plot.py
push_gym/push_gym/utils/astar-algorithm-cpp/: .gitignore  CMakeLists.txt  README.md
push_gym/push_gym/utils/astar-algorithm-cpp/include/: MapInfo.h  MapSearchNode.h  find_path.h  find_path_all.h  fsa.h  get_combination.h  line_of_sight.h  smooth_path.h  stlastar.h
push_gym/push_gym/utils/astar-algorithm-cpp/src/: AStarPython.cpp  Simulator.py  main_many_path.cpp  main_single_path.cpp
push_gym/push_gym/utils/astar-algorithm-cpp/test/: solve_plot.py  test_AStarPython.py  test_combination.cpp  test_smooth.py
(+61 files in other folders)
